# ads_backend_diploma

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .gitignore  API_EXAMPLES.md  Dockerfile  README.md  all_tests.py  coverage_tests.py  create_admin.py  db.sqlite3  demo_script.sh  docker-compose.yml  final_coverage_stats.txt  final_coverage_tests.py  final_test.py  nginx.conf  pyproject.toml  requirements.txt  simple_test.py  specific_line_coverage.py  test_ads_views_final.py  test_fix_issues.py  test_users_views_final.py  views_coverage.py
ads/: models.py  permissions.py  serializers.py  test_fixed.py  tests.py  tests_backup.py  urls.py  views.py
ads/migrations/: 0001_initial.py
config/: settings.py  urls.py
users/: models.py  serializers.py  test_views_fixed.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email.py
